# myswat

./: .gitignore  2026-03-19-gpt-myswat-progress.md  CHAT_DESIGN_WORKFLOW_DESIGN.md  CODE_INDEX_DESIGN.md  CONVERSATION_PERSISTENCE_DESIGN.md  CONVERSATION_PERSISTENCE_PLAN.md  CONVERSATION_PERSISTENCE_TECHNICAL_DESIGN.md  MEMORY_LAYER_IMPROVEMENT_DESIGN.md  MYSWAT_VS_MEM0_ANALYSIS.md  README.md  WORK_MODE_DESIGN.md  myswat  pyproject.toml  workflow_graph.mmd
docs/: architecture.md  cli-reference.md  configuration.md  installation.md  mcp-redesign.md
src/myswat/: __init__.py  large_payloads.py  repo_ops.py
tests/: conftest.py  test_repo_ops.py
tests/test_agents/: test_base.py  test_claude_runner.py  test_codex_runner.py  test_factory.py  test_kimi_runner.py  test_session_manager.py  test_session_manager_extended.py
tests/test_cli/: test_chat_cmd.py  test_chat_cmd_additional.py  test_chat_cmd_mcp.py  test_cli_helpers.py  test_feed_cmd.py  test_init_cmd.py  test_learn_cmd.py  test_learn_cmd_extended.py  test_main_cmd.py  test_main_cmd_additional.py  test_main_conversation_persistence.py  test_main_hidden_cmds.py  test_memory_cmd.py  test_progress.py  test_progress_extended.py  test_run_cmd.py  test_work_cmd.py  test_work_cmd_additional.py  test_work_cmd_helpers.py  test_worker_cmd.py  test_workflow_display.py
tests/test_config/: test_settings.py
tests/test_db/: test_connection.py  test_connection_retry.py  test_schema.py  test_schema_migrations.py  test_schema_snapshot.py
tests/test_integration/: test_fib_workflow.py  test_live_codex_worker.py
(+124 files in other folders)
