[project]
name = "myswat"
version = "0.1.0"
description = "Multi-AI agent co-working system for code development"
requires-python = ">=3.12"
dependencies = [
    "pymysql>=1.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "FlagEmbedding>=1.2.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "prompt_toolkit>=3.0.0",
]

[project.scripts]
myswat = "myswat.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/myswat"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]
